# app-mcp-server

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  =1.0.0  AUTHENTICATION.md  Dockerfile  README.md  TOOL_VERSIONING.md  debug_mcp_server.py  media-types.schema.json  media-types.yaml  pyproject.toml  test_search_output.json  test_search_output_clean.json
.github/: coverage-baseline.json
.github/workflows/: build-docker.yaml  deploy-staging.yaml  deploy.yaml  pr-quality-gate.yaml  release.yaml  update-tool-version.yaml  validate-media-types.yml
data/: Unidades.geojson  bairros.json  estabelecimentos.csv
engine/: agent.py  custom_react_agent.py
k8s/prod/: resources.yaml
k8s/staging/: kustomization.yaml  resources.yaml
src/: __init__.py  app.py  main.py  serve_http.py
src/config/: .env.example  __init__.py  config.py  env.py  settings.py
src/flows/: _crypto.py  _token.py
src/flows/divida_ativa/: flow.json  handler.py
src/flows/divida_ativa/opcoes/: flow.json  handler.py
src/flows/reparo_luminaria/: flow.json  handler.py
src/middleware/: check_token.py  hybrid_verifier.py  keycloak_verifier.py
src/middlewares/: token_validation.py
src/observability/: __init__.py  audit_log.py
src/resources/: __init__.py  rio_info.py
src/tests/: README.md  conftest.py
src/tests/e2e/: README.md  run_preview_e2e.py
src/tests/interceptor/: __init__.py  conftest.py  http_client_tests.py  interceptor_decorator_tests.py  real_scenarios_tests.py
src/tests/tools/: conftest.py
src/tests/unit/: conftest.py  test_basic_modules.py  test_tool_versioning.py
src/tests/unit/app/: __init__.py  test_main.py
src/tests/unit/interceptor/: __init__.py  conftest.py  test_error_interceptor.py  test_http_client.py  test_real_scenarios.py
src/tests/unit/middleware/: __init__.py  test_check_token.py  test_hybrid_verifier.py
src/tests/unit/observability/: __init__.py  test_audit_log.py
src/tests/unit/tools/: test_divida_ativa.py  test_divida_ativa_opcoes_handler.py  test_equipments_and_cor_alert.py  test_inbound_media.py  test_inbound_media_audio.py  test_luminaria_entity_extractor.py  test_luminaria_flow.py  test_luminaria_flow_conditional_visibility.py  test_memory_and_feedback.py  test_multi_step_service_schema.py  test_sgrc_parse_affirmation.py  test_tts.py  test_whatsapp_flow_normalizers.py  test_whatsapp_flow_sender.py  test_whatsapp_interactive.py  test_whatsapp_media.py  test_whatsapp_message_status.py  test_whatsapp_webhook_setup.py
src/tests/unit/utils/: __init__.py  test_bigquery_json_serialization.py  test_error_interceptor_json_serialization.py  test_govbr_token.py  test_inbound_media_shared.py  test_ipp_resolver.py  test_media_sniff.py  test_meta_cdn_client.py  test_salesforce_client.py  test_service_clients.py  test_sgrc_ca.py  test_wrappers_and_infisical.py
src/tests/unit/workflows/: conftest.py  test_confirmation_parsing.py  test_divida_ativa_workflow.py  test_iptu_api_service.py  test_iptu_helpers.py  test_iptu_models.py  test_poda_models.py  test_poda_state_helpers.py  test_poda_support.py  test_poda_templates.py  test_poda_ticket_builder.py  test_reparo_luminaria_workflow.py  test_reset_session_state.py  test_sgrc_new_ticket_resilience.py  test_workflow_routing.py
src/tools/: __init__.py  calculator.py  cor_alert_tools.py  datetime_tools.py  dharma_search.py  divida_ativa.py  divida_ativa_flow.py  equipamentos.py  equipments_tools.py  feedback_tools.py  floodings.py  govbr_auth.py  inbound_media.py  inbound_media_audio.py  inbound_media_document.py  inbound_media_video.py  inbound_media_vision.py  langgraph_workflows.py  luminaria_entity_extractor.py  luminaria_flow.py  memory.py  search.py  tts.py  utils.py  web_search_surkai.py  whatsapp_flow_sender.py  whatsapp_interactive.py  whatsapp_media.py  whatsapp_message_status.py  whatsapp_webhook_setup.py
src/tools/auth/: __init__.py  govbr_auth.py
src/tools/crawl_pages/: crawl4ai_custom_context.md  smart_crawl.py  utils.py
src/tools/equipments/: openlocationcode.py  pluscode_service.py  utils.py
src/tools/google_search/: gemini_service.py
src/tools/multi_hook_services/: PLAN.md  README.md  __init__.py
src/tools/multi_hook_services/core/: base_flow.py  flow_exceptions.py  flow_executor.py
src/tools/multi_step_service/: PLAN.md  README.md  tool.py
src/tools/multi_step_service/core/: __init__.py  base_workflow.py  models.py  orchestrator.py  state.py  step_navigator.py
src/tools/whatsapp_flows/: README.md  normalizers.py  reparo_luminaria.flow.json
src/utils/: __init__.py  bigquery.py  cor_oncall_client.py  datetime_utils.py  eai_api.py  error_interceptor.py  govbr_token.py  http_client.py  idempotency.py  inbound_media_shared.py  infisical.py  ipp_resolver.py  json_utils.py  llms.py  log.py  media_sniff.py  meta_cdn_client.py  prompts.py  redis_client.py  redis_lock.py  rmi_oauth2.py  salesforce_client.py  sgrc_ca.py  test_agent.py  tool_version.json  tool_versioning.py  typesense_api.py
src/utils/agent/: headless_test.py  interactive_chat.py  interactive_test.py  prompt.py  tools.py  utils.py
tools/: validate_media_types_registry.py
(+65 files in other folders)
