[project]
name = "app-mcp-server"
version = "1.0.0"
description = "Servidor FastMCP para o Rio de Janeiro"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "uvicorn",
    "pytz",
    "fastmcp>=2.9.2",
    "loguru>=0.7.3",
    "fastapi>=0.115.14",
    "aiohttp>=3.12.13",
    "dotenv>=0.9.9",
    "google-genai>=1.25.0",
    "requests>=2.32.4",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.2.0",
    "google-cloud-bigquery>=3.35.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "crawl4ai>=0.7.2",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
