[project]
name = "app-mcp-server"
version = "1.0.0"
description = "Servidor FastMCP para o Rio de Janeiro"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "uvicorn",
    "pytz",
    "fastmcp>=2.9.2",
    "loguru>=0.7.3",
    "fastapi>=0.115.14",
    "aiohttp>=3.12.13",
    "dotenv>=0.9.9",
    "google-genai>=1.25.0",
    "requests>=2.32.4",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=2.18,<3",
    "google-cloud-bigquery>=3.35.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "crawl4ai>=0.7.2",
    "pydantic>=2.11.7",
    "redis>=7.0.1",
    "langgraph==0.6.4",
    "google-cloud-aiplatform[agent-engines]>=1.106.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=1.3.0",
    "langchain==0.3.27",
    "langchain-core==0.3.76",
    "langchain-google-cloud-sql-pg==0.14.1",
    "langchain-google-genai>=2.1.9",
    "langchain-google-vertexai==2.1.2",
    "langchain-mcp-adapters>=0.1.9",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "opentelemetry-instrumentation-langchain>=0.45.6",
    "opentelemetry-sdk>=1.36.0",
    "pytest>=9.0.1",
    "pandas>=2.3.3",
    "async>=0.6.2",
    "googlemaps>=4.10.0",
    "async-googlemaps>=0.0.10",
    "geopandas>=1.1.1",
    "jellyfish>=1.2.1",
    "num2words>=0.5.14",
    "prefeitura-rio>=1.1.2",
    "pendulum>=2.1.2",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py", "*_tests.py"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.coverage.run]
omit = [
    "src/tests/*",
    "src/resources/*",
    "src/tools/caio/*",
    "src/tools/crawl_pages/*",
    "src/tools/multi_step_service/workflows/divida_ativa/*",
    "src/tools/multi_step_service/workflows/bank_account.py",
    "src/tools/calculator.py",
    "src/tools/datetime_tools.py",
    "src/tools/dharma_search.py",
    "src/tools/feedback_tools.py",
    "src/tools/web_search_surkai.py",
    "src/utils/agent/*",
    "src/utils/llms.py",
    "src/utils/prompts.py",
    "src/utils/test_agent.py",
    "src/tools/multi_step_service/workflows/iptu_pagamento/api/api_service_fake.py",
]

[tool.coverage.report]
omit = [
    "src/tests/*",
    "src/resources/*",
    "src/tools/caio/*",
    "src/tools/crawl_pages/*",
    "src/tools/multi_step_service/workflows/divida_ativa/*",
    "src/tools/multi_step_service/workflows/bank_account.py",
    "src/tools/calculator.py",
    "src/tools/datetime_tools.py",
    "src/tools/dharma_search.py",
    "src/tools/feedback_tools.py",
    "src/tools/web_search_surkai.py",
    "src/utils/agent/*",
    "src/utils/llms.py",
    "src/utils/prompts.py",
    "src/utils/test_agent.py",
    "src/tools/multi_step_service/workflows/iptu_pagamento/api/api_service_fake.py",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest-cov>=6.2.1",
]
